--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,6 +52,139 @@ button i {
 input, select {
 
     padding: .25rem .5rem;
+}
 
+.todo-container {
 
+    max-width: 450px;
+    margin: 3rem auto;
+    background-color: #fdfdfd;
+    padding: 1.5rem;
+    border-radius: 15px;
+
+}
+
+.todo-container header {
+
+    text-align: center;
+    padding: 0 1rem 1rem;
+    border-bottom: 2px solid #ccc;
+
+}
+
+/* Todo formulário */
+
+#todo-form, #edit-form {
+
+    padding: 1rem;
+    border-bottom: 1px solid #ccc;
+}
+
+#todo-form p, #edit-form p {
+
+    margin-bottom: .5rem;
+    font-weight: bold;
+}
+
+.form-control {
+
+    display: flex;
+}
+
+.form-control input {
+
+    margin-right: .3rem;
+}
+
+#cancel-edit-btn {
+
+    margin-top: 1rem;
+}
+
+/* Todo Toolbar */
+
+#toolbar {
+
+    padding: 1rem;
+    border-bottom: 1px solid #ccc;
+    display: flex;
+}
+
+#toolbar h4 {
+
+    margin-bottom: .5rem;
+}
+
+#search {
+
+    border-right: 1px solid #ddd;
+    padding-right: 1rem;
+    margin-right: 1rem;
+    width: 65%;
+    flex-direction: column;
+    display: flex;
+    
+}
+
+#search form {
+
+    display: flex;
+}
+
+#search input {
+
+    width: 100%;
+    margin-right: 0.3rem;
+}
+
+#filter {
+
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+}
+
+#filter select {
+
+    flex: 1;
+}
+
+.hide {
+
+    display: none;
+}
+
+/* Todo List */
+
+.todo {
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1rem;
+    border-bottom: 1px solid #ddd;
+    transition: 0.3s;
+}
+
+.todo h3 {
+
+    flex: 1;
+    font-size: 1rem;
+}
+
+.todo button {
+
+    margin-left: 0.4rem;
+}
+
+.done {
+
+    background-color: #395169;
+}
+
+.done h3 {
+
+    color: #fff;
+    text-decoration: line-through;
+    font-style: italic;
 }
