Imagem e codigo atualizado

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,7 @@
 
 body {
 
-    background-image: url("../IMG/abstract-grunge-decorative-relief-navy-blue-stucco-wall-texture-wide-angle-rough-colored-background_1258-28311.jpg");
+    background-image: url("../IMG/b9sSQXU9l8had-Tg2Wao7cmjlcbA0dHnWD4wTmIA3a4.webp");
     background-size: cover;
 }
 
